--- a/style/main.css
+++ b/style/main.css
@@ -72,6 +72,7 @@ html {
 }
 body {
     background-image: url(../imgs/bg.png);
+    color: white;
 }
 html,
 body,
@@ -82,7 +83,6 @@ body > * {
     text-decoration: none;
     border: none;
     outline: none;
-    color: inherit;
 }
 main {
     height: 100%;
@@ -265,4 +265,24 @@ main {
     width: var(--neptune-w);
     height: var(--neptune-w);
     background-color: darkblue;
+}
+
+/*  */
+/* header */
+/*  */
+header {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-inline: 1em;
+    text-transform: capitalize;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+header > .day-counter {
+    letter-spacing: 1px;
+    & > span {
+        display: inline-block;
+        transform: translateY(0.085em);
+    }
 }
